force-app/main/default/objects/custom_create204__c/custom_create204__c.object-meta.xml
<CustomObject>
    <label>Custom created object204</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects204</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>