force-app/main/default/objects/custom_create204__c/fields/custom_create_204field520__c.field-meta.xml
<CustomField>
    <fullName>custom_create_204field520__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 204field520</label>
    <type>Checkbox</type>
</CustomField>